--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
         "@nestjs/core": "^9.0.0",
         "@nestjs/mongoose": "^9.2.1",
         "@nestjs/platform-express": "^9.0.0",
+        "@types/cookie-session": "^2.0.44",
         "bcrypt": "^5.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
+        "cookie-session": "^2.0.0",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
@@ -37,6 +40,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/jest": "29.2.4",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "18.11.18",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
