--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "class-validator": "^0.14.0",
         "cookie-session": "^2.0.0",
         "jsonwebtoken": "^9.0.0",
-        "mongoose": "6.0.11",
+        "mongoose": "^7.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
